Remove max permsize settings (not supported in Java 8)